[gd_scene load_steps=15 format=2]

[ext_resource path="res://Levels/Level1.gd" type="Script" id=1]
[ext_resource path="res://Items/Flame/Flame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Boiler/Boiler.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/level1.png" type="Texture" id=4]
[ext_resource path="res://Items/Podium/Podium.tscn" type="PackedScene" id=5]
[ext_resource path="res://Meters.tscn" type="PackedScene" id=6]
[ext_resource path="res://Lion/Lion.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Stage1.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/GameOver.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/Clapping.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/TimeReduce.ogg" type="AudioStream" id=11]
[ext_resource path="res://Items/CheckPoints.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2650, 0.356628 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.556427, 92.8256 )

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )
single_flame = ExtResource( 2 )
boiler = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 5247.0
margin_bottom = 460.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Floor" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 1688.56, -62.7929 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 926.074, 473.952 )
scale = Vector2( 0.998797, 0.542278 )
shape = SubResource( 1 )

[node name="LeftWall" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 65.3129, 317.039 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="BoilerContainer" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="Podium" parent="Items" instance=ExtResource( 5 )]
position = Vector2( 5107, 379 )

[node name="Meters" parent="Items" instance=ExtResource( 6 )]
editor/display_folded = true

[node name="1" parent="Items/Meters" index="1"]
position = Vector2( 500, 0 )

[node name="2" parent="Items/Meters" index="2"]
position = Vector2( 1000, 0 )

[node name="3" parent="Items/Meters" index="3"]
position = Vector2( 1500, 0 )

[node name="4" parent="Items/Meters" index="4"]
position = Vector2( 2000, 0 )

[node name="5" parent="Items/Meters" index="5"]
position = Vector2( 2500, 0 )

[node name="6" parent="Items/Meters" index="6"]
position = Vector2( 3000, 0 )

[node name="7" parent="Items/Meters" index="7"]
position = Vector2( 3500, 0 )

[node name="8" parent="Items/Meters" index="8"]
position = Vector2( 4000, 0 )

[node name="9" parent="Items/Meters" index="9"]
position = Vector2( 4500, 0 )

[node name="10" parent="Items/Meters" index="10"]
position = Vector2( 5000, 0 )

[node name="FlameContainer" type="Node2D" parent="."]

[node name="Lion" parent="." instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 100, 394.147 )

[node name="Camera2D" parent="Lion" index="1"]
offset = Vector2( 90, -85 )
limit_left = -90
limit_top = 0
limit_right = 5200
limit_bottom = 460

[node name="SentinelsContainer" type="Node2D" parent="."]

[node name="Sounds" type="Node2D" parent="."]
editor/display_folded = true

[node name="LevelSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
autoplay = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="WinSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="ReduceTimeSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )

[node name="CheckPoints" parent="." instance=ExtResource( 12 )]

[node name="chkpt_90m" parent="CheckPoints" index="10"]
position = Vector2( 640, 394.147 )

[node name="CheckPoint90" parent="CheckPoints/chkpt_90m" index="0"]
position = Vector2( 0, -100 )

[node name="chkpt_80m" parent="CheckPoints" index="11"]
position = Vector2( 1140, 394.147 )

[node name="CheckPoint80" parent="CheckPoints/chkpt_80m" index="0"]
position = Vector2( 0, -100 )

[node name="chkpt_70m" parent="CheckPoints" index="12"]
position = Vector2( 1640, 394.147 )

[node name="CheckPoint70" parent="CheckPoints/chkpt_70m" index="0"]
position = Vector2( 0, -100 )

[node name="chkpt_60m" parent="CheckPoints" index="13"]
position = Vector2( 2140, 394.147 )

[node name="CheckPoint60" parent="CheckPoints/chkpt_60m" index="0"]
position = Vector2( 0, -100 )

[node name="chkpt_50m" parent="CheckPoints" index="14"]
position = Vector2( 2640, 394.147 )

[node name="CheckPoint50" parent="CheckPoints/chkpt_50m" index="0"]
position = Vector2( 0, -100 )

[node name="chkpt_40m" parent="CheckPoints" index="15"]
position = Vector2( 3140, 394.147 )

[node name="CheckPoint40" parent="CheckPoints/chkpt_40m" index="0"]
position = Vector2( 0, -100 )

[node name="chkpt_30m" parent="CheckPoints" index="16"]
position = Vector2( 3640, 394.147 )

[node name="CheckPoint30" parent="CheckPoints/chkpt_30m" index="0"]
position = Vector2( 0, -100 )

[node name="chkpt_20m" parent="CheckPoints" index="17"]
position = Vector2( 4140, 394.147 )

[node name="CheckPoint20" parent="CheckPoints/chkpt_20m" index="0"]
position = Vector2( 0, -100 )
[connection signal="lose" from="Lion" to="." method="_on_Lion_lose"]
[connection signal="win" from="Lion" to="." method="_on_Lion_win"]
[connection signal="finished" from="Sounds/GameOverSound" to="." method="_on_GameOverSound_finished"]
[connection signal="finished" from="Sounds/WinSound" to="." method="_on_WinSound_finished"]

[editable path="Items/Meters"]

[editable path="Lion"]

[editable path="CheckPoints"]
